--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES6",
-        "baseUrl": "./"
+        "baseUrl": "./",
+        "jsx": "react-jsx"
     }
 }
